generate nested and flat structure translations